<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassCatcher</string>
    <string name="action_settings">Settings</string>
    <string name="pidstr">PID</string>
    <string name="passwordstr">Password</string>
    <string name="loginstr">Login</string>
    <string name="crnstr">CRN</string>
    <string name="termstr">Term</string>
    <string name="yearstr">Year</string>
    <string name="subjectstr">Subject</string>
    <string name="crsestr">CRSE</string>
    <string name="runstr">Run</string>
    <string name="cancelstr">Cancel</string>
    <string name="logoutstr">Logout</string>
    
	<string-array name="term_array">
        <item>Spring</item>
        <item>Fall</item>
    </string-array>
    <string-array name="subj_array">
        <item>AAEC</item>
		<item>ACIS</item>
		<item>AEE</item>
		<item>AFST</item>
		<item>AHRM</item>
		<item>AINS</item>
		<item>ALHR</item>
		<item>ALS</item>
		<item>AOE</item>
		<item>APS</item>
		<item>APSC</item>
		<item>ARBC</item>
		<item>ARCH</item>
		<item>ART</item>
		<item>AS</item>
		<item>ASPT</item>
		<item>AT</item>
		<item>BC</item>
		<item>BCHM</item>
		<item>BIOL</item>
		<item>BIT</item>
		<item>BMES</item>
		<item>BMSP</item>
		<item>BMVS</item>
		<item>BSE</item>
		<item>BTDM</item>
		<item>BUS</item>
		<item>C21S</item>
		<item>CEE</item>
		<item>CHE</item>
		<item>CHEM</item>
		<item>CHN</item>
		<item>CINE</item>
		<item>CLA</item>
		<item>CMDA</item>
		<item>CNST</item>
		<item>COMM</item>
		<item>COS</item>
		<item>CS</item>
		<item>CSES</item>
		<item>DASC</item>
		<item>ECE</item>
		<item>ECON</item>
		<item>EDCI</item>
		<item>EDCO</item>
		<item>EDCT</item>
		<item>EDEL</item>
		<item>EDEP</item>
		<item>EDHE</item>
		<item>EDIT</item>
		<item>EDP</item>
		<item>EDRE</item>
		<item>EDTE</item>
		<item>ENGE</item>
		<item>ENGL</item>
		<item>ENGR</item>
		<item>ENSC</item>
		<item>ENT</item>
		<item>ESM</item>
		<item>FA</item>
		<item>FIN</item>
		<item>FIW</item>
		<item>FL</item>
		<item>FOR</item>
		<item>FR</item>
		<item>FST</item>
		<item>GBCB</item>
		<item>GEOG</item>
		<item>GEOS</item>
		<item>GER</item>
		<item>GIA</item>
		<item>GR</item>
		<item>GRAD</item>
		<item>HD</item>
		<item>HEB</item>
		<item>HIST</item>
		<item>HNFE</item>
		<item>HORT</item>
		<item>HTM</item>
		<item>HUM</item>
		<item>IDS</item>
		<item>IDST</item>
		<item>IS</item>
		<item>ISC</item>
		<item>ISE</item>
		<item>ITAL</item>
		<item>ITDS</item>
		<item>JPN</item>
		<item>JUD</item>
		<item>LAHS</item>
		<item>LAR</item>
		<item>LAT</item>
		<item>LDRS</item>
		<item>MACR</item>
		<item>MATH</item>
		<item>ME</item>
		<item>MGT</item>
		<item>MINE</item>
		<item>MKTG</item>
		<item>MN</item>
		<item>MS</item>
		<item>MSE</item>
		<item>MUS</item>
		<item>NANO</item>
		<item>NEUR</item>
		<item>NR</item>
		<item>NSEG</item>
		<item>PAPA</item>
		<item>PHIL</item>
		<item>PHS</item>
		<item>PHYS</item>
		<item>PORT</item>
		<item>PPWS</item>
		<item>PSCI</item>
		<item>PSYC</item>
		<item>REAL</item>
		<item>REL</item>
		<item>RLCL</item>
		<item>RUS</item>
		<item>SBIO</item>
		<item>SOC</item>
		<item>SPAN</item>
		<item>SPIA</item>
		<item>STAT</item>
		<item>STS</item>
		<item>SYSB</item>
		<item>TA</item>
		<item>UAP</item>
		<item>UH</item>
		<item>UNIV</item>
		<item>VM</item>
		<item>WGS</item>
    </string-array>
</resources>
