<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#f1f1f1" >

    <TextView
        android:id="@+id/textView1"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/crnstr" />

    <EditText
        android:id="@+id/crninput"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/termspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/crninput"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/crninput"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/termspinner"
        android:text="@string/termstr" />

    <EditText
        android:id="@+id/yearinput"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/termspinner"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <Spinner
        android:id="@+id/subjectspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yearinput"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/yearinput"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/termspinner"
        android:layout_marginTop="16dp"
        android:text="@string/yearstr" />

    <TextView
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/subjectspinner"
        android:text="@string/subjectstr" />

    <TextView
        android:id="@+id/textView5"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/subjectspinner"
        android:layout_marginTop="20dp"
        android:text="@string/crsestr" />

    <EditText
        android:id="@+id/crseinput"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/runbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crseinput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/runstr"
        android:textSize="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/cancelbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/runbutton"
        android:text="@string/cancelstr"
        android:textSize="@dimen/activity_vertical_margin" />
	
	<Button
        android:id="@+id/logoutbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cancelbutton"
        android:text="@string/logoutstr"
        android:textSize="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/classupdate"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="" />

</RelativeLayout>