<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/crnstr"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/crninput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/termspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/crninput"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/crninput"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/termspinner"
        android:text="@string/termstr"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/yearinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/termspinner"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/termspinner"
        android:layout_marginTop="16dp"
        android:text="@string/yearstr"
        android:textColor="#000000" />
</RelativeLayout>
